--- a/quiz/src/App.css
+++ b/quiz/src/App.css
@@ -341,7 +341,9 @@ body {
   animation: spin 1s linear infinite;
   margin: 0 auto 20px;
 }
-
+.ai-options{
+  color: rgb(35, 28, 28);
+}
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
